--- a/slice_with_mergekit/slice.yaml
+++ b/slice_with_mergekit/slice.yaml
@@ -1,10 +1,10 @@
 slices:
   - sources:
-      - model: mistralai/Mistral-7B-Instruct-v0.2
-        layer_range: [0, 21]
+      - model: MaziyarPanahi/calme-3.2-instruct-78b
+        layer_range: [0, 49]
   - sources:
-      - model: mistralai/Mistral-7B-Instruct-v0.2
-        layer_range: [29,32]
+      - model: MaziyarPanahi/calme-3.2-instruct-78b
+        layer_range: [61,85]
             
 merge_method: passthrough
 dtype: bfloat16
