--- a/slice_with_mergekit/slice.yaml
+++ b/slice_with_mergekit/slice.yaml
@@ -1,10 +1,10 @@
 slices:
   - sources:
-      - model: Qwen/Qwen2.5-72B-Instruct
+      - model: MaziyarPanahi/calme-3.2-instruct-78b
         layer_range: [0, 49]
   - sources:
-      - model: Qwen/Qwen2.5-72B-Instruct
-        layer_range: [59,79]
+      - model: MaziyarPanahi/calme-3.2-instruct-78b
+        layer_range: [61,85]
             
 merge_method: passthrough
 dtype: bfloat16
